test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   annotations:
     deployment.kubernetes.io/revision: "1"
   creationTimestamp: "2022-06-29T21:33:42Z"
   generation: 1
   labels:
     app: nginx-test
   name: nginx-test
   namespace: default
   resourceVersion: "2527"
   uid: 01af7460-3c33-4f9d-9577-0c3fb7f663c3
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: nginx-test
   strategy:
     rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
       creationTimestamp: null
       labels:
         app: nginx-test
     spec:
       containers:
       - image: nginx
         imagePullPolicy: Always
         name: nginx
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
